feat: vehicle crud